// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 1`] = `
"---
name: simple-document
description: A simple document
partials:
  intro: sections/intro.md
---

# Simple Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## More Content

Additional content here.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 3`] = `
{
  "description": "A simple document",
  "name": "simple-document",
  "partials": {
    "intro": "sections/intro.md",
  },
}
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds single file successfully 4`] = `
"---
name: simple-document
description: A simple document
partials:
  intro: sections/intro.md
---

# Simple Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## More Content

Additional content here.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 1`] = `
"---
name: main-documentation
description: Main documentation file
partials:
  intro: sections/intro.md
  conclusion: sections/conclusion.md
  guides:
    - guides/*.md
---

# Complete Documentation

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Core Content

This is the main content of the documentation.

## Related Guides

---
name: advanced-guide
description: Advanced usage guide
---

## Advanced Usage

Here are some advanced patterns and techniques.


---
name: getting-started-guide
description: Getting started guide
---

## Getting Started

1. Install the package
2. Configure your settings
3. Start using it


---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 3`] = `
[
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/intro.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/conclusion.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/advanced.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/getting-started.md",
]
`;

exports[`markdown-di CLI - Integration Tests Build Operations builds complex document with multiple dependencies 4`] = `
"---
name: main-documentation
description: Main documentation file
partials:
  intro: sections/intro.md
  conclusion: sections/conclusion.md
  guides:
    - guides/*.md
---

# Complete Documentation

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Core Content

This is the main content of the documentation.

## Related Guides

---
name: advanced-guide
description: Advanced usage guide
---

## Advanced Usage

Here are some advanced patterns and techniques.


---
name: getting-started-guide
description: Getting started guide
---

## Getting Started

1. Install the package
2. Configure your settings
3. Start using it


---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Build Operations reports build errors for invalid files 1`] = `
[
  {
    "location": "partials.missing",
    "message": "Partial file not found: sections/does-not-exist.md",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 1`] = `
"---
name: standalone-document
description: Document without dependencies
---

# Standalone Document

This document has no dependencies.

## Content

Just regular markdown content.
"
`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 3`] = `[]`;

exports[`markdown-di CLI - Integration Tests Build Operations handles files with no dependencies 4`] = `
"---
name: standalone-document
description: Document without dependencies
---

# Standalone Document

This document has no dependencies.

## Content

Just regular markdown content.
"
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates single file successfully 1`] = `[]`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates single file successfully 2`] = `
{
  "description": "A simple document",
  "name": "simple-document",
  "partials": {
    "intro": "sections/intro.md",
  },
}
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates and reports errors 1`] = `
[
  {
    "location": "partials.missing",
    "message": "Partial file not found: sections/does-not-exist.md",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates document structure 1`] = `
[
  {
    "location": "content",
    "message": "Partial '{{partials.intro}}' is not defined in frontmatter",
    "type": "injection",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Validation Operations validates undefined references 1`] = `
[
  {
    "location": "content",
    "message": "Partial '{{partials.undefined}}' is not defined in frontmatter",
    "type": "injection",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 1`] = `
"---
name: complex-index
description: Complex project index
partials:
  intro: sections/intro.md
  conclusion: sections/conclusion.md
  guides:
    - guides/*.md
---

# Project Index

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Guides

---
name: advanced-guide
description: Advanced usage guide
---

## Advanced Usage

Here are some advanced patterns and techniques.


---
name: getting-started-guide
description: Getting started guide
---

## Getting Started

1. Install the package
2. Configure your settings
3. Start using it


---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 3`] = `
[
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/intro.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/sections/conclusion.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/advanced.md",
  "/Users/ps/Documents/GitHub/markdown-di/packages/test-fixtures-cli/src/guides/getting-started.md",
]
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios processes document with nested blueprints and references 4`] = `
"---
name: complex-index
description: Complex project index
partials:
  intro: sections/intro.md
  conclusion: sections/conclusion.md
  guides:
    - guides/*.md
---

# Project Index

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Guides

---
name: advanced-guide
description: Advanced usage guide
---

## Advanced Usage

Here are some advanced patterns and techniques.


---
name: getting-started-guide
description: Getting started guide
---

## Getting Started

1. Install the package
2. Configure your settings
3. Start using it


---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.

"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios handles documents with mixed content types 1`] = `
"---
name: mixed-content
description: Document with various markdown elements
partials:
  intro: sections/intro.md
---

# Mixed Content Document

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.


## Code Example

\`\`\`javascript
const example = "Hello World";
console.log(example);
\`\`\`

## Table

| Column 1 | Column 2 |
|----------|----------|
| Value 1  | Value 2  |

## List

- Item 1
- Item 2
  - Nested item
- Item 3

> **Note:** This is a blockquote.
"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios handles documents with mixed content types 2`] = `[]`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios preserves markdown formatting and structure 1`] = `
"---
name: formatted-doc
description: Document with specific formatting
partials:
  conclusion: sections/conclusion.md
---

# Title with **Bold** and *Italic*

This is a paragraph with [a link](https://example.com).

## Subsection

Content here with \`inline code\`.

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.


### Deeper Heading

Final content.
"
`;

exports[`markdown-di CLI - Integration Tests Complex Scenarios preserves markdown formatting and structure 2`] = `
"---
name: formatted-doc
description: Document with specific formatting
partials:
  conclusion: sections/conclusion.md
---

# Title with **Bold** and *Italic*

This is a paragraph with [a link](https://example.com).

## Subsection

Content here with \`inline code\`.

---
name: conclusion-section
description: Conclusion section
---

# Conclusion

Thank you for reading. This concludes the documentation.


### Deeper Heading

Final content.
"
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles empty frontmatter gracefully 1`] = `
[
  {
    "location": "document start",
    "message": "No frontmatter found in document",
    "type": "frontmatter",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles missing files in dependencies 1`] = `
[
  {
    "location": "partials.nonexistent",
    "message": "Partial file not found: sections/does-not-exist.md",
    "type": "file",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles malformed reference syntax 1`] = `
[
  {
    "location": "line 5, column 0",
    "message": "Invalid characters in partial reference: "invalid{nested"",
    "type": "syntax",
  },
]
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles documents with special characters 1`] = `
"---
name: special-chars
description: Document with special characters
partials:
  intro: sections/intro.md
---

# Special Characters Test

This document contains special characters: é, ñ, ü, 中文, 日本語

---
name: intro-section
description: Introduction section
---

# Introduction

Welcome to this documentation. This is a reusable introduction section.

"
`;

exports[`markdown-di CLI - Integration Tests Edge Cases handles documents with special characters 2`] = `[]`;
